register ,verify
